# TRACE

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: visualizer.html
src/embeddings/: classifier.py  generate_embeddings.py  prepare_data.py
src/run_trace/: evaluate_gold.py  format_data.py  process_spans.py  run_trace_frequency.py  run_trace_reference.py  trace_supervised.py  trace_unsupervised.py  utils.py
src/zeroshot_inference/: analyze_length.py  prepare_data.py  utils.py
src/zeroshot_inference/clinical_prediction/: prompts.py  run_inference.py
src/zeroshot_inference/extract_information/: prompts.py  run_inference.py
